Contact and about page added

--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -59,6 +59,7 @@
                             class="form-control"
                             placeholder="Product"
                             name="name"
+                            required
                           />
                         </div>
                         <div class="mb-3">
@@ -67,8 +68,9 @@
                             type="text"
                             class="form-control"
                             placeholder="Brand"
-                            ,
+                            
                             name="brand"
+                            required
                           />
                         </div>
                         <div class="mb-3">
@@ -80,6 +82,7 @@
                             class="form-control"
                             placeholder="Description"
                             name="description"
+                            required
                           />
                         </div>
 
@@ -90,6 +93,7 @@
                             class="form-control"
                             placeholder="Price"
                             name="price"
+                            required
                           />
                         </div>
                         <div class="mb-3">
@@ -99,6 +103,7 @@
                               type="file"
                               class="custom-file-input"
                               name="image"
+                              required
                             />
                             <label class="custom-file-label" for="customFile"
                               >Choose file</label
