--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -85,6 +85,7 @@
           class="form-control"
           name="title"
           id="basic-default-company"
+          required
         />
       </div>
         <div class="mb-3">
@@ -96,6 +97,7 @@
             class="form-control"
             name="description"
             id="basic-default-company"
+            required
           />
         </div>
         <div class="mb-3">
@@ -107,6 +109,7 @@
               class="form-control"
               name="image"
               id="basic-default-company"
+              required
             />
           </div>
         </div>
