--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -14,7 +14,7 @@
     />
 
     <title>
-      Vertical Layouts - Forms | Sneat - Bootstrap 5 HTML Admin Template - Pro
+      Insoles Admin Panel
     </title>
 
     <meta name="description" content="" />
@@ -85,6 +85,7 @@
           class="form-control"
           name="name"
           id="basic-default-company"
+          required
         />
       </div>
         <div class="mb-3">
@@ -96,6 +97,7 @@
             class="form-control"
             name="code"
             id="basic-default-company"
+            required
           />
         </div>
         <div class="mb-3">
@@ -107,6 +109,7 @@
               class="form-control"
               name="discount"
               id="basic-default-company"
+              required
             />
           </div>
         </div>
