--- a/views/admin/editBanner.ejs
+++ b/views/admin/editBanner.ejs
@@ -14,7 +14,7 @@
     />
 
     <title>
-      Vertical Layouts - Forms | Sneat - Bootstrap 5 HTML Admin Template - Pro
+      Insoles Admin Panel
     </title>
 
     <meta name="description" content="" />
@@ -86,6 +86,7 @@
           name="title"
           id="basic-default-company"
           value="<%= banner.title %> "
+          required
         />
       </div>
         <div class="mb-3">
@@ -98,6 +99,7 @@
             name="description"
             id="basic-default-company"
             value="<%= banner.description %> "
+            required
           />
         </div>
         <div class="mb-3">
@@ -109,6 +111,7 @@
               class="form-control"
               name="image"
               id="basic-default-company"
+              required
             />
           </div>
         </div>
