--- a/views/admin/editCoupon.ejs
+++ b/views/admin/editCoupon.ejs
@@ -14,7 +14,7 @@
     />
 
     <title>
-      Vertical Layouts - Forms | Sneat - Bootstrap 5 HTML Admin Template - Pro
+      Insoles Admin Panel
     </title>
 
     <meta name="description" content="" />
@@ -86,6 +86,7 @@
           name="name"
           id="basic-default-company"
           value="<%= coupon.name %> "
+          required
         />
       </div>
         <div class="mb-3">
@@ -98,6 +99,7 @@
             name="code"
             id="basic-default-company"
             value="<%= coupon.code %> "
+            required
           />
         </div>
         <div class="mb-3">
@@ -110,6 +112,7 @@
               name="discount"
               id="basic-default-company"
               value="<%= coupon.discount %> "
+              required
             />
           </div>
         </div>
