--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,18 +1,19 @@
-<%- include('./userHeader.ejs') -%>
-    <!-- Error -->
-    <div class="container-xxl container-p-y">
-        <div class="misc-wrapper">
-          <h2 class="mb-2 mx-2">Page Not Found :(</h2>
-          <p class="mb-4 mx-2">Oops! 😖 The requested URL was not found on this server.</p>
-          <div class="mt-3">
-            <img
-              src="/public/images/page-misc-error-light.png"
-              alt="page-misc-error-light"
-              width="500"
-              class="img-fluid"
-            />
-          </div>
-        </div>
-      </div>
-      <!-- /Error -->
-<%- include('./userFooter.ejs') -%>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>port 7000 page not found</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+    <div style="height: 100vh; background-color: #f1f5f9;"   class=" d-flex justify-content-center align-items-center flex-column">
+        <a href="javascript:history.back()"><img class="m-5 p-5" src="https://freefrontend.com/assets/img/html-funny-404-pages/CodePen-404-Page.gif" alt=""></a>
+    </div>
+    
+</body>
+</html>
+
