--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Minishop - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Insoles</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -68,7 +68,7 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="/userHome">Insoles</a>
+        <a class="navbar-brand" href="/">Insoles</a>
         <button
           class="navbar-toggler"
           type="button"
