--- a/views/admin/categoryForm.ejs
+++ b/views/admin/categoryForm.ejs
@@ -100,6 +100,7 @@
             class="form-control"
             name="subCategory"
             id="basic-default-company"
+            required
           />
         </div>
         <div class="mb-3">
@@ -109,6 +110,7 @@
               type="file"
               class="custom-file-input"
               name="image"
+              required
             />
             <label class="custom-file-label" for="customFile"
               >Choose file</label
