--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -14,7 +14,7 @@
     />
 
     <title>
-      Vertical Layouts - Forms | Sneat - Bootstrap 5 HTML Admin Template - Pro
+      Insoles Admin Panel
     </title>
 
     <meta name="description" content="" />
@@ -100,6 +100,7 @@
             value="<%= singleCategory.subCategory %>"
             name="subCategory"
             id="basic-default-company"
+            required
           />
           
         </div>
@@ -116,6 +117,7 @@
             
             aria-describedby="inputGroupFileAddon04"
             aria-label="Upload"
+            required
             />
           </div>
           <!-- <div class="row"> -->
