--- a/views/admin/mainCategory.ejs
+++ b/views/admin/mainCategory.ejs
@@ -14,7 +14,7 @@
     />
 
     <title>
-      Vertical Layouts - Forms | Sneat - Bootstrap 5 HTML Admin Template - Pro
+      Insoles Admin Panel
     </title>
 
     <meta name="description" content="" />
@@ -82,6 +82,7 @@
             class="form-control"
             name="category"
             id="basic-default-fullname"
+            required
           />
         </div>
         
