--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Minishop - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Insoles</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -161,7 +161,7 @@
     			<div class="col-sm-12 col-md-6 col-lg-3 ftco-animate d-flex">
     				<div class="product d-flex flex-column">
 						
-    					<a href="/login" class="img-prod"><img class="img-fluid" style="width: 100%; height: 350px;" src="/<%= x.image %>" alt="Colorlib Template" >
+    					<a href="/productdetail/<%= x._id %>" class="img-prod"><img class="img-fluid" style="width: 100%; height: 350px;" src="/<%= x.image %>" alt="Colorlib Template" >
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3">	
