--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,6 +1,6 @@
 <html lang="en">
     <head >
-        <title style="color: brown">LOGIN/SIGN UP WITH ZAUR</title>
+        <title style="color: brown">Insoles</title>
         <meta name="author" content="Zaur">
         <meta descryption content="Presentation of website">
         <meta name="keywords" content="technology, cyber security, software">
