--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -16,7 +16,7 @@
 				            <h1 class="mb-4 mt-3"><%= x.title %></h1>
 				            <p class="mb-4"><%= x.description %></p>
 				            
-				            <p><a href="#" class="btn-custom">Discover Now</a></p>
+				            <p><a href="/shop" class="btn-custom">Discover Now</a></p>
 				          </div>
 		            </div>
 		          </div>
@@ -39,7 +39,7 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Free Shipping</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>Get free shipping any item from our website.</p>
               </div>
             </div>      
           </div>
@@ -50,7 +50,7 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Support Customer</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>Get Valuable vouchers gifts from our website .</p>
               </div>
             </div>    
           </div>
@@ -61,7 +61,7 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Secure Payments</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>We provide secure payment in our website.</p>
               </div>
             </div>      
           </div>
@@ -74,7 +74,7 @@
 				<div class="row justify-content-center mb-3 pb-3">
           <div class="col-md-12 heading-section text-center ftco-animate">
             <h2 class="mb-4">New Shoes Arrival</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p></p>
           </div>
         </div>   		
     	</div>
@@ -93,15 +93,6 @@
     							<div class="cat">
 		    						<span>Lifestyle</span>
 		    					</div>
-		    					<div class="rating">
-	    							<p class="text-right mb-0">
-	    								<a href="#"><span class="ion-ios-star-outline"></span></a>
-	    								<a href="#"><span class="ion-ios-star-outline"></span></a>
-	    								<a href="#"><span class="ion-ios-star-outline"></span></a>
-	    								<a href="#"><span class="ion-ios-star-outline"></span></a>
-	    								<a href="#"><span class="ion-ios-star-outline"></span></a>
-	    							</p>
-	    						</div>
 	    					</div>
     						<h3><a href="#"><%= x.name %></a></h3>
     						<div class="pricing">
@@ -118,11 +109,19 @@
 				<% }) %>
     		</div>
     	</div>
+		<p class="text-center">
+			<a href="/shop" class="btn btn-primary py-3 px-4"
+			  >Discover More</a
+			>
+		  </p>
     </section>
+	
+
+	
 
 
 
-    <section class="ftco-section ftco-choose ftco-no-pb ftco-no-pt">
+    <!-- <section class="ftco-section ftco-choose ftco-no-pb ftco-no-pt">
     	<div class="container">
 				<div class="row no-gutters">
 					<div class="col-lg-4">
@@ -178,9 +177,9 @@
     			</div>
   			</div>
     	</div>
-    </section>
+    </section> -->
 
-    <section class="ftco-section ftco-deal bg-primary">
+    <!-- <section class="ftco-section ftco-deal bg-primary">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-6">
@@ -209,189 +208,189 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section> -->
 
     <section class="ftco-section testimony-section">
-      <div class="container">
-        <div class="row">
-        	<div class="col-lg-5">
-        		<div class="services-flow">
-        			<div class="services-2 p-4 d-flex ftco-animate">
-        				<div class="icon">
-        					<span class="flaticon-bag"></span>
-        				</div>
-        				<div class="text">
-	        				<h3>Free Shipping</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
-        				</div>
-        			</div>
-        			<div class="services-2 p-4 d-flex ftco-animate">
-        				<div class="icon">
-        					<span class="flaticon-heart-box"></span>
-        				</div>
-        				<div class="text">
-	        				<h3>Valuable Gifts</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
-	        			</div>
-        			</div>
-        			<div class="services-2 p-4 d-flex ftco-animate">
-        				<div class="icon">
-        					<span class="flaticon-payment-security"></span>
-        				</div>
-        				<div class="text">
-	        				<h3>All Day Support</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
-	        			</div>
-        			</div>
-        			<div class="services-2 p-4 d-flex ftco-animate">
-        				<div class="icon">
-        					<span class="flaticon-customer-service"></span>
-        				</div>
-        				<div class="text">
-	        				<h3>All Day Support</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
-	        			</div>
-        			</div>
-        		</div>
-        	</div>
-          <div class="col-lg-7">
-          	<div class="heading-section ftco-animate mb-5">
-	            <h2 class="mb-4">Our satisfied customer says</h2>
-	            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
-	          </div>
-            <div class="carousel-testimony owl-carousel">
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(../../public/images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(../../public/images/person_2.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Interface Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(../../public/images/person_3.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">UI Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(../../public/images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(../../public/images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">System Analyst</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-gallery">
-    	<div class="container">
-    		<div class="row justify-content-center">
-    			<div class="col-md-8 heading-section text-center mb-4 ftco-animate">
-            <h2 class="mb-4">Follow Us On Instagram</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
-          </div>
-    		</div>
-    	</div>
-    	<div class="container-fluid px-0">
-    		<div class="row no-gutters">
-					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="../../public/images/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../public/images/gallery-1.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
+		<div class="container">
+		  <div class="row">
+			  <div class="col-lg-5">
+				  <div class="services-flow">
+					  <div class="services-2 p-4 d-flex ftco-animate">
+						  <div class="icon">
+							  <span class="flaticon-bag"></span>
+						  </div>
+						  <div class="text">
+							  <h3>Free Shipping</h3>
+							  <p class="mb-0">Get free shipping any item from our website.</p>
+						  </div>
+					  </div>
+					  <div class="services-2 p-4 d-flex ftco-animate">
+						  <div class="icon">
+							  <span class="flaticon-heart-box"></span>
+						  </div>
+						  <div class="text">
+							  <h3>Valuable Gifts</h3>
+							  <p class="mb-0">Get Valuable vouchers gifts from our website .</p>
+						  </div>
+					  </div>
+					  <div class="services-2 p-4 d-flex ftco-animate">
+						  <div class="icon">
+							  <span class="flaticon-payment-security"></span>
+						  </div>
+						  <div class="text">
+							  <h3>Secure support</h3>
+							  <p class="mb-0">We provide secure payment in our website.</p>
+						  </div>
+					  </div>
+					  <div class="services-2 p-4 d-flex ftco-animate">
+						  <div class="icon">
+							  <span class="flaticon-customer-service"></span>
+						  </div>
+						  <div class="text">
+							  <h3>All Day Support</h3>
+							  <p class="mb-0">We provide 24x7 user support in our website.</p>
+						  </div>
+					  </div>
+				  </div>
+			  </div>
+			<div class="col-lg-7">
+				<div class="heading-section ftco-animate mb-5">
+				  <h2 class="mb-4">Our satisfied customer says</h2>
+				  <p>Our satisfied customers</p>
+				</div>
+			  <div class="carousel-testimony owl-carousel ftco-animate">
+				<div class="item">
+				  <div class="testimony-wrap">
+					<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
+					  <span class="quote d-flex align-items-center justify-content-center">
+						<i class="icon-quote-left"></i>
+					  </span>
 					</div>
-					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="../../public/images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../public/images/gallery-2.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
+					<div class="text">
+					  <p class="mb-4 pl-4 line">Great customer support they provided</p>
+					  <p class="name">Garreth Smith</p>
+					  <span class="position">Marketing Manager</span>
 					</div>
-					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="../../public/images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../public/images/gallery-3.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
+				  </div>
+				</div>
+				<div class="item">
+				  <div class="testimony-wrap">
+					<div class="user-img mb-4" style="background-image: url(images/person_2.jpg)">
+					  <span class="quote d-flex align-items-center justify-content-center">
+						<i class="icon-quote-left"></i>
+					  </span>
 					</div>
-					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="../../public/images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../public/images/gallery-4.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
+					<div class="text">
+					  <p class="mb-4 pl-4 line">Great customer support they provided</p>
+					  <p class="name">Garreth Smith</p>
+					  <span class="position">Interface Designer</span>
 					</div>
-					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="../../public/images/gallery-5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../public/images/gallery-5.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
+				  </div>
+				</div>
+				<div class="item">
+				  <div class="testimony-wrap">
+					<div class="user-img mb-4" style="background-image: url(images/person_3.jpg)">
+					  <span class="quote d-flex align-items-center justify-content-center">
+						<i class="icon-quote-left"></i>
+					  </span>
 					</div>
-					<div class="col-md-4 col-lg-2 ftco-animate">
-						<a href="../../public/images/gallery-6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../public/images/gallery-6.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
+					<div class="text">
+					  <p class="mb-4 pl-4 line">Great customer support they provided</p>
+					  <p class="name">Garreth Smith</p>
+					  <span class="position">UI Designer</span>
 					</div>
-        </div>
-    	</div>
-    </section>
+				  </div>
+				</div>
+				<div class="item">
+				  <div class="testimony-wrap">
+					<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
+					  <span class="quote d-flex align-items-center justify-content-center">
+						<i class="icon-quote-left"></i>
+					  </span>
+					</div>
+					<div class="text">
+					  <p class="mb-4 pl-4 line">Great customer support they provided</p>
+					  <p class="name">Garreth Smith</p>
+					  <span class="position">Web Developer</span>
+					</div>
+				  </div>
+				</div>
+				<div class="item">
+				  <div class="testimony-wrap">
+					<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
+					  <span class="quote d-flex align-items-center justify-content-center">
+						<i class="icon-quote-left"></i>
+					  </span>
+					</div>
+					<div class="text">
+					  <p class="mb-4 pl-4 line">Great customer support they provided</p>
+					  <p class="name">Garreth Smith</p>
+					  <span class="position">System Analyst</span>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
+  
+	  <section class="ftco-gallery">
+		  <div class="container">
+			  <div class="row justify-content-center">
+				  <div class="col-md-8 heading-section text-center mb-4 ftco-animate">
+			  <h2 class="mb-4">Follow Us On Instagram</h2>
+			  <p></p>
+			</div>
+			  </div>
+		  </div>
+		  <div class="container-fluid px-0">
+			  <div class="row no-gutters">
+					  <div class="col-md-4 col-lg-2 ftco-animate">
+						  <a href="images/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
+							  <div class="icon mb-4 d-flex align-items-center justify-content-center">
+							  <span class="icon-instagram"></span>
+						  </div>
+						  </a>
+					  </div>
+					  <div class="col-md-4 col-lg-2 ftco-animate">
+						  <a href="images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
+							  <div class="icon mb-4 d-flex align-items-center justify-content-center">
+							  <span class="icon-instagram"></span>
+						  </div>
+						  </a>
+					  </div>
+					  <div class="col-md-4 col-lg-2 ftco-animate">
+						  <a href="images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
+							  <div class="icon mb-4 d-flex align-items-center justify-content-center">
+							  <span class="icon-instagram"></span>
+						  </div>
+						  </a>
+					  </div>
+					  <div class="col-md-4 col-lg-2 ftco-animate">
+						  <a href="images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-4.jpg);">
+							  <div class="icon mb-4 d-flex align-items-center justify-content-center">
+							  <span class="icon-instagram"></span>
+						  </div>
+						  </a>
+					  </div>
+					  <div class="col-md-4 col-lg-2 ftco-animate">
+						  <a href="images/gallery-5.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-5.jpg);">
+							  <div class="icon mb-4 d-flex align-items-center justify-content-center">
+							  <span class="icon-instagram"></span>
+						  </div>
+						  </a>
+					  </div>
+					  <div class="col-md-4 col-lg-2 ftco-animate">
+						  <a href="images/gallery-6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-6.jpg);">
+							  <div class="icon mb-4 d-flex align-items-center justify-content-center">
+							  <span class="icon-instagram"></span>
+						  </div>
+						  </a>
+					  </div>
+		  </div>
+		  </div>
+	  </section>
 
 	<script>
 		function itemAdded(id){
