--- a/views/userHeader.ejs
+++ b/views/userHeader.ejs
@@ -1,92 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Minishop - Free Bootstrap 4 Template by Colorlib</title>
-        <meta charset="utf-8" />
+  <head>
+    <title>Insoles</title>
+    <meta charset="utf-8" />
 
-       
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-        <meta
-          name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
-    
-        <link
-          href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
-          rel="stylesheet"
-        />
-    
-        <link
-          rel="stylesheet"
-          href="../public/stylesheet/open-iconic-bootstrap.min.css"
-        />
-        <link rel="stylesheet" href="../public/stylesheet/animate.css" />
-    
-        <link
-          rel="stylesheet"
-          href="../public/stylesheet/owl.carousel.min.css"
-        />
-        <link
-          rel="stylesheet"
-          href="../public/stylesheet/owl.theme.default.min.css"
-        />
-        <link rel="stylesheet" href="../public/stylesheet/magnific-popup.css" />
-    
-        <link rel="stylesheet" href="../public/stylesheet/aos.css" />
-    
-        <link rel="stylesheet" href="../public/stylesheet/ionicons.min.css" />
-    
-        <link
-          rel="stylesheet"
-          href="../public/stylesheet/bootstrap-datepicker.css"
-        />
-        <link
-          rel="stylesheet"
-          href="../public/stylesheet/jquery.timepicker.css"
-        />
-    
-        <link rel="stylesheet" href="../public/stylesheet/flaticon.css" />
-        <link rel="stylesheet" href="../public/stylesheet/icomoon.css" />
-        <link rel="stylesheet" href="../public/stylesheet/style.css" />
-    
-        <link
-          rel="stylesheet"
-          type="text/css"
-          href="/public/stylesheet/css/util.css"
-        />
-        <link
-          rel="stylesheet"
-          type="text/css"
-          href="/public/stylesheet/css/main.css"
-        />
-    
-        <link
-          rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-        />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
+      rel="stylesheet"
+    />
 
-        <!-- sweetalert -->
-        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link
+      rel="stylesheet"
+      href="../public/stylesheet/open-iconic-bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../public/stylesheet/animate.css" />
 
-        <!-- fontawesome -->
+    <link rel="stylesheet" href="../public/stylesheet/owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="../public/stylesheet/owl.theme.default.min.css"
+    />
+    <link rel="stylesheet" href="../public/stylesheet/magnific-popup.css" />
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../public/stylesheet/aos.css" />
 
-        <!-- ajax -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    <link rel="stylesheet" href="../public/stylesheet/ionicons.min.css" />
 
+    <link
+      rel="stylesheet"
+      href="../public/stylesheet/bootstrap-datepicker.css"
+    />
+    <link rel="stylesheet" href="../public/stylesheet/jquery.timepicker.css" />
 
+    <link rel="stylesheet" href="../public/stylesheet/flaticon.css" />
+    <link rel="stylesheet" href="../public/stylesheet/icomoon.css" />
+    <link rel="stylesheet" href="../public/stylesheet/style.css" />
 
-        <!-- shop page  -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/public/stylesheet/css/util.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/public/stylesheet/css/main.css"
+    />
 
-        
-        
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
 
-      </head>
+    <!-- sweetalert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- fontawesome -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- ajax -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+  </head>
   <body class="goto-here">
-
-    
-
     <nav
       class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
       id="ftco-navbar"
@@ -106,7 +93,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto" >
             <li class="nav-item active">
               <a href="/" class="nav-link">Home</a>
             </li>
@@ -121,19 +108,16 @@
                 >Catalog</a
               >
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="/shop">Shop</a>
-                <a class="dropdown-item" href="product-single.html"
-                  >Single Product</a
-                >
-                <a class="dropdown-item" href="cart.html">Cart</a>
-                <a class="dropdown-item" href="checkout.html">Checkout</a>
+                <a class="dropdown-item" href="/shop">SHOP</a>
+                <a class="dropdown-item" href="/cart">CART</a>
+                <a class="dropdown-item" href="/checkout">CHECKOUT</a>
               </div>
+            </li> 
+            <li class="nav-item">
+              <a href="/about" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
+              <a href="/contact" class="nav-link">Contact</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -151,18 +135,22 @@
                 <a class="dropdown-item" href="/logout">LOGOUT</a>
               </div>
             </li>
-
-            <li class="nav-item">
-              <a href="/wishlist" class="nav-link">Wishlist</a>
+            <li class="nav-item ml-5 " >
+              <a href="/wishlist" class="nav-link" 
+                ><i   class="fa-2x icon-heart"></i></a
+              >
             </li>
             <li class="nav-item cta cta-colored">
               <a href="/cart" class="nav-link"
-                ><span class="icon-shopping_cart"></span>[0]</a
+                ><span class="fa-2x icon-shopping_cart"></span></a
               >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-  <body>
-<html>
+    <body>
+      <html></html>
+    </body>
+  </body>
+</html>
