Shop page and Filter added

--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -12,10 +12,7 @@
 		<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
-		<div class="container" id="container">
-				
-			
-			
+		<div class="container col-lg-12 col-md-6 col-sm-4" id="container">
 			<div class="form-container  sign-in-container">
 				<form action="/admin/admin" method="post" enctype="multipart/form-data">
 					<div class="header">Admin Login</div>
@@ -53,9 +50,6 @@
 				</div>
 				</form>
 			</div>
-			
-			
-			
 			<div class="overlay-container">
 				<div class="overlay">
 					<div class="overlay-panel overlay-left">
@@ -71,11 +65,8 @@
 					<div class="overlay-panel overlay-right">
 						<h1>Hello, Friend!</h1>
             		<p>Enter your personal details and start your journey with us</p>
-						
-					<div class="group button-group">
-						<button class="ghost" id="signUp">Sign up</button>
+							
 					
-				</div>
 			</div>
 		
 			
