--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -15,11 +15,11 @@
                         <div class="card-body">
                           <h5 class="card-title text-primary">Congratulations Nihal! 🎉</h5>
                           <p class="mb-4">
-                            You have done <span class="fw-bold">72%</span> more sales today. Check your new badge in
+                            You have  <span class="fw-bold">new</span> sales today. Check your new orders in
                             your profile.
                           </p>
 
-                          <a href="javascript:;" class="btn btn-sm btn-outline-primary">View Badges</a>
+                          <a href="/admin/orders" class="btn btn-sm btn-outline-primary">View orders</a>
                         </div>
                       </div>
                       <div class="col-sm-5 text-center text-sm-left">
