--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -91,7 +91,7 @@
     					<div class="text py-3 pb-4 px-3">	
     						<div class="d-flex">
     							<div class="cat">
-		    						<span>Lifestyle</span>
+		    						<span><%= x.brand.brand %></span>
 		    					</div>
 	    					</div>
     						<h3><a href="#"><%= x.name %></a></h3>
